# jian

digital_human_v1/: asr.py  asr2.py  function.py  llm.py  main.py  start.bat  test.py  tts.py  variables.env
knowledge/: GraphRAG.docx
knowledge/knowledge-graph/: .gitignore  LICENSE  README.md  config.toml  generate-graph.py  json_to_csv.py  json_to_html.py  knowledge_graph.json  pyproject.toml  requirements.txt
knowledge/knowledge-graph/community/: community.py  community_info.json
knowledge/knowledge-graph/data/: QA.json  industrial-revolution.txt  knowledge_graph.csv  qa.csv
knowledge/knowledge-graph/docs/: index.html
knowledge/knowledge-graph/query/: entity.csv  graphrag_utils.py  node_vectorize.py  query_api.py  query_mcp.py
knowledge/knowledge-graph/src/: generate_graph.py
knowledge/knowledge-graph/src/knowledge_graph/: __init__.py  config.py  entity_standardization.py  llm.py  main.py  text_utils.py  visualization.py
knowledge/knowledge-graph/src/knowledge_graph/prompts/: __init__.py  entity_prompts.py  inference_prompts.py  main_prompts.py
knowledge/knowledge-graph/src/knowledge_graph/templates/: graph_template.html
test/dongtuo/: analyze_data_report.py  director.py  fetch_chunk_images.py  generate_result.py  generate_url.py  get_weather.py  list_database.py  llm_answer.py  requirements.txt  research_knowledge.py  reserve_to_markdown.py  similarity_question.py  test_llm_url.py
test/jian_digitalhuman_mcp-dev/: .env  JIAN_PLATFORM_LOGIN_USAGE.md  README.md  env_template.txt  main.py  mcp_instance.py  ragflow_http_bridge.py  requirements.txt  (+3 more)
(+114 files in other folders)
