[project]
name = "ai-knowledge-graph"
version = "0.6.1"
description = "Takes a text document and generates an interactive knowledge graph"
authors = [{ name = "Robert McDermott", email = "robert.c.mcdermott@gmail.com" }, ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "pyvis>=0.3.2",
    "pyvis-network>=0.0.6",
    "requests>=2.32.3",
    "tomli>=2.2.1",
    "python-louvain>=0.16"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
generate-graph = "src.knowledge_graph.main:main"

[tool.setuptools]
package-dir = {"" = "."}
